# coraxml-utils

./: .editorconfig  Pipfile  README.md  change_cora_header.py  metadata_texts_20181220.csv  process_trans.py  pyproject.toml  requirements.txt  setup.py  trans2trans.py
coraxml_utils/: character.py  cli.py  coralib.py  exporter.py  importer.py  modifier.py  parsed_token.py  parser.py  settings.py  tokenizer.py
res/: charclasses.dot  docmodel.dot
test/: test_modifier.py  test_parsed_token.py
test/coralib/: test_CoraToken.py  test_Document.py  test_Trans.py
test/importer/: test_coraxml.py  test_factory.py
test/parser/: test_anselm_parser.py  test_parsed_token.py  test_redi_parser.py  test_redi_token.py  test_ref_parser.py  test_rem_token.py
test/tokenizer/: test_redi_tokenizer.py  test_rex_tokenizer.py
