[tool.poetry]
name = "coraxml-utils"
version = "0.1.2"
description = "Utilities for processing CorA-XML files"
authors = ["Adam Roussel <adam.roussel@rub.de>",
           "Fabian Barteld <fabian.barteld@rub.de>",
	   "Katrin Ortmann <katrin.ortmann@rub.de>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
coraxml-utils = "coraxml_utils.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
lark-parser = "^0.11.2"
lxml = "^4.6.3"
markdown-strings = "^3.3.0"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
nose2 = "^0.10.0"
six = "^1.15.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
